Git webhooks ready for testing

--- a/src/uLearn.Web/appsettings.json
+++ b/src/uLearn.Web/appsettings.json
@@ -23,5 +23,15 @@
         "api": {
             "endpoint": "http://localhost:8000/"
         }
+    },
+    "git": {
+        "webhook": {
+            "github": {
+                "secret": ""
+            },
+            "gitlab": {
+                "secret": ""
+            }
+        }
     }
 }
