--- a/src/GitCourseUpdater/GitCourseUpdater.csproj
+++ b/src/GitCourseUpdater/GitCourseUpdater.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-      <PlatformTarget>x64</PlatformTarget>
+      <PlatformTarget>AnyCPU</PlatformTarget>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
@@ -16,6 +16,7 @@
       <PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
       <PackageReference Include="LibGit2Sharp-SSH-standard" Version="0.26.0-preview-0065" />
       <PackageReference Include="LibGit2Sharp-SSH-standard.NativeBinaries" Version="1.0.251" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
       <PackageReference Include="Serilog" Version="2.7.1" />
       <PackageReference Include="System.IO.Compression" Version="4.3.0" />
     </ItemGroup>
