Load course from Admin/Packages page

--- a/src/uLearn.Web/appsettings.json
+++ b/src/uLearn.Web/appsettings.json
@@ -10,6 +10,7 @@
     "graphiteServiceName": "web",
     "buildExerciseStudentZips": true,
     "exerciseStudentZipsDirectory": "",
+    "keysDirectory": "C:/ulearn/test_git_deploy_keys",
     "certificates": {
         "directory": ""
     },
@@ -25,6 +26,7 @@
         }
     },
     "git": {
+        "deployKeyPassphrase": "test",
         "webhook": {
             "github": {
                 "secret": ""
