--- a/src/GitCourseUpdater/GitCourseUpdater.csproj
+++ b/src/GitCourseUpdater/GitCourseUpdater.csproj
@@ -17,6 +17,7 @@
       <PackageReference Include="LibGit2Sharp-SSH-standard" Version="0.26.0-preview-0065" />
       <PackageReference Include="LibGit2Sharp-SSH-standard.NativeBinaries" Version="1.0.251" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
       <PackageReference Include="Serilog" Version="2.7.1" />
       <PackageReference Include="System.IO.Compression" Version="4.3.0" />
     </ItemGroup>
