--- a/src/GitCourseUpdater/GitCourseUpdater.csproj
+++ b/src/GitCourseUpdater/GitCourseUpdater.csproj
@@ -13,6 +13,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="BouncyCastle" Version="1.8.5" />
       <PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
       <PackageReference Include="LibGit2Sharp-SSH-standard" Version="0.26.0-preview-0065" />
       <PackageReference Include="LibGit2Sharp-SSH-standard.NativeBinaries" Version="1.0.251" />
