--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -766,6 +766,10 @@
     <Compile Include="Migrations\201905160845235_AddRepoUrl2NotUploadedPackageNotification.Designer.cs">
       <DependentUpon>201905160845235_AddRepoUrl2NotUploadedPackageNotification.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905221027183_AddCourseGitRepos.cs" />
+    <Compile Include="Migrations\201905221027183_AddCourseGitRepos.Designer.cs">
+      <DependentUpon>201905221027183_AddCourseGitRepos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AdditionalScore.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -776,6 +780,7 @@
     <Compile Include="Models\CommentLike.cs" />
     <Compile Include="Models\CommentPolicy.cs" />
     <Compile Include="Models\CourseAccess.cs" />
+    <Compile Include="Models\CourseGit.cs" />
     <Compile Include="Models\CourseVersion.cs" />
     <Compile Include="Models\EnabledAdditionalScoringGroup.cs" />
     <Compile Include="Models\ExerciseCodeReview.cs" />
@@ -1200,6 +1205,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201905160845235_AddRepoUrl2NotUploadedPackageNotification.resx">
       <DependentUpon>201905160845235_AddRepoUrl2NotUploadedPackageNotification.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905221027183_AddCourseGitRepos.resx">
+      <DependentUpon>201905221027183_AddCourseGitRepos.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
