--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -69,6 +69,7 @@
   <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.8.2" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.8.2" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.8.2" targetFramework="net47" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net47" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net47" />
@@ -89,7 +90,7 @@
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.0" targetFramework="net47" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net47" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net47" />
-  <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net47" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers" version="2.10.0" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net47" />
   <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net47" />
   <package id="Microsoft.NETCore.Platforms" version="2.1.0" targetFramework="net47" />
