--- a/src/AntiPlagiarism.UpdateDb/appsettings.json
+++ b/src/AntiPlagiarism.UpdateDb/appsettings.json
@@ -7,7 +7,7 @@
         "minimumLevel": "debug",
         "enableEntityFrameworkLogging": false
     },
-    
+    "graphiteServiceName": "antiplagiarism-updatedb",
     "antiplagiarism": {
         "snippetTokensCount": 12
     }
