--- a/src/AntiPlagiarism.Web/appsettings.json
+++ b/src/AntiPlagiarism.Web/appsettings.json
@@ -11,7 +11,7 @@
         "minimumLevel": "debug"
     },
     "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True",
-    
+    "graphiteServiceName": "antiplagiarism",
     "antiplagiarism": {
         "snippetTokensCount": 12,
         "maxCodeLength": 100000,
