--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -10,7 +10,7 @@
         "pathFormat": "logs/log-{Date}.log",
         "minimumLevel": "information"
     },
-    "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True",
+    "database": "Server=ulearn-test-db;Database=ulearn;User Id=ulearn;Password=H8gfRBK0Se2Yg2jQMZ54;",
     
     "coursesDirectory": "../Courses/",
     "baseUrl": "http://localhost:3000",
@@ -28,7 +28,7 @@
     },
     "web": {
         "cookieKeyRingDirectory": "../cookie_protection_keys/",
-        "cookieName": "ulearn.auth",
+        "cookieName": "test.ulearn.auth",
         "cookieDomain": "localhost",
         "cookieSecure": false,
         "cors": {
