build: bump deps

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,12 +1,15 @@
-FROM node:10-alpine
+FROM node:current-alpine
 
-# Installs latest Chromium (68) package.
+# Installs latest Chromium (73) package.
 RUN apk update && apk upgrade && \
     echo @edge http://nl.alpinelinux.org/alpine/edge/community >> /etc/apk/repositories && \
     echo @edge http://nl.alpinelinux.org/alpine/edge/main >> /etc/apk/repositories && \
     apk add --no-cache \
-      chromium@edge \
+      chromium@edge=~73.0.3683.103 \
       nss@edge \
+      freetype@edge \
+      harfbuzz@edge \
+      ttf-freefont@edge \
       git@edge
 
 # Skip downloading Chromium when installing puppeteer. We'll use the installed package.
@@ -28,7 +31,7 @@ USER pptruser
 # Install deps for tests.
 RUN yarn
 
-# Puppeteer v1.4.0 works with Chromium 68.
-RUN yarn add --dev puppeteer@1.4.0
+# Puppeteer v1.12.2 works with Chromium 73.
+RUN yarn add --dev puppeteer@1.12.2
 
 CMD ["node", "docker-test-runner.js"]
