--- a/src/package.json
+++ b/src/package.json
@@ -7,28 +7,29 @@
     "precommit": "pretty-quick --staged"
   },
   "dependencies": {
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.0",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "babel-loader": "^8.0.0-beta.6",
-    "chai": "^4.1.2",
-    "css-loader": "^0.28.11",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^0.14.3",
-    "mocha": "^5.2.0",
-    "prettier": "latest",
-    "pretty-quick": "latest",
-    "puppeteer": "1.4.0",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.19.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-glob-entries": "^1.0.1",
-    "webpack-node-externals": "^1.7.2"
+    "@babel/core": "7.4.5",
+    "@babel/plugin-proposal-class-properties": "7.4.4",
+    "@babel/preset-env": "7.4.5",
+    "@babel/preset-react": "7.0.0",
+    "babel-loader": "8.0.6",
+    "chai": "4.2.0",
+    "core-js": "3.1.3",
+    "css-loader": "2.1.1",
+    "html-webpack-plugin": "3.2.0",
+    "husky": "2.4.0",
+    "mocha": "6.1.4",
+    "prettier": "1.18.2",
+    "pretty-quick": "1.11.0",
+    "puppeteer": "1.17.0",
+    "regenerator-runtime": "0.13.2",
+    "style-loader": "0.23.1",
+    "webpack": "4.33.0",
+    "webpack-cli": "3.3.3",
+    "webpack-glob-entries": "1.0.1",
+    "webpack-node-externals": "1.7.2"
   }
 }
