--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -144,7 +144,7 @@
       <assemblies>
         <add assembly="System.Runtime"/>
         <add assembly="System.Collections"/>
-        <add assembly="RunCsJob.Api"/>
+        <add assembly="RunCheckerJob.Api"/>
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.7" maxRequestLength="16000000" enableVersionHeader="false" maxUrlLength="2048"/>
