--- a/src/RunCheckerJob/RunCheckerJob.csproj
+++ b/src/RunCheckerJob/RunCheckerJob.csproj
@@ -2,12 +2,12 @@
 
     <PropertyGroup>
         <TargetFrameworks>net47;netcoreapp2.2</TargetFrameworks>
+        <OutputType>Exe</OutputType>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Common\Common.csproj" />
       <ProjectReference Include="..\Core\Core.csproj" />
-      <ProjectReference Include="..\RunCheckerJob.Api\RunCheckerJob.Api.csproj" />
       <PackageReference Include="log4net" Version="2.0.8" />
     </ItemGroup>
 
