--- a/src/RunCsJob/packages.config
+++ b/src/RunCsJob/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="DotNetZip" version="1.11.0" targetFramework="net47" />
   <package id="FluentAssertions" version="4.19.2" targetFramework="net47" />
+  <package id="JetBrains.Annotations" version="11.1.0" targetFramework="net47" />
   <package id="log4net" version="2.0.8" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
   <package id="Microsoft.Build" version="15.8.166" targetFramework="net47" />
