--- a/src/RunCheckerJob/RunCheckerJob.csproj
+++ b/src/RunCheckerJob/RunCheckerJob.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="NUnit" Version="3.10.1" />
+      <PackageReference Include="System.Text.Encoding.CodePages" Version="4.5.0" />
       <ProjectReference Include="..\Common\Common.csproj" />
       <ProjectReference Include="..\Core\Core.csproj" />
       <PackageReference Include="log4net" Version="2.0.8" />
