Test and fix Fixed content commit

--- a/sandbox/js/container/src/Dockerfile
+++ b/sandbox/js/container/src/Dockerfile
@@ -2,11 +2,12 @@ FROM node:current-alpine
 
 # Add new user for sandbox
 RUN addgroup -S student && adduser -S -g student student \
-   && chown -R student:student /home/student
+    && chown -R student:student /home/student
 
 COPY . /app/
 
-RUN chown -R student:student /app
+RUN mkdir -p /source \
+    && chown -R student:student /app
 
 WORKDIR app
 
@@ -15,5 +16,3 @@ USER student
 
 # Install deps for tests.
 RUN yarn
-
-CMD ["node", "docker-test-runner.js"]
