--- a/src/RunCheckerJob/App.config
+++ b/src/RunCheckerJob/App.config
@@ -33,6 +33,7 @@
 		<root>
 			<level value="DEBUG" />
 			<appender-ref ref="FileAppender" />
+			<appender-ref ref="ConsoleAppender" />
 		</root>
 		<appender name="FileAppender" type="log4net.Appender.FileAppender">
 			<file value="logs\\runcheckerjob.log" />
@@ -40,6 +41,11 @@
 			<encoding value="utf-8" />
 			<layout type="log4net.Layout.PatternLayout">
 				<param name="ConversionPattern" value="%date [%thread] %-5level %logger — %message%newline" />
+			</layout>
+		</appender>
+		<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date [%thread] %-5level %logger — %message%newline" />
 			</layout>
 		</appender>
 	</log4net>
