--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -23,6 +23,7 @@
     "babel-preset-react-app": "5.0.3",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
+    "classnames": "2.2.6",
     "css-loader": "1.0.0",
     "debounce": "1.2.0",
     "dotenv": "6.0.0",
