--- a/src/CourseTool/CourseTool.csproj
+++ b/src/CourseTool/CourseTool.csproj
@@ -398,6 +398,7 @@
     <Compile Include="CmdLineOptions\ULearnOptions.cs" />
     <Compile Include="CmdLineOptions\OlxPatchFromUlearnOptions.cs" />
     <Compile Include="CmdLineOptions\OlxPatchVideoOptions.cs" />
+    <Compile Include="Validating\UniversalExerciseValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -593,6 +594,10 @@
     <ProjectReference Include="..\Metrics\Metrics.csproj">
       <Project>{b6b60d19-c6bd-4d66-95da-14480a18770c}</Project>
       <Name>Metrics</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RunCheckerJob\RunCheckerJob.csproj">
+      <Project>{650fe5bd-4345-41b9-800e-d00ca4cef51f}</Project>
+      <Name>RunCheckerJob</Name>
     </ProjectReference>
     <ProjectReference Include="..\RunCsJob\RunCsJob.csproj">
       <Project>{77B16F9D-3CDF-4CC6-BE5F-B6BADFAC5394}</Project>
