--- a/src/GiftsGranter/App.config
+++ b/src/GiftsGranter/App.config
@@ -20,7 +20,7 @@
   </appSettings>   
   <log4net>
     <root>
-      <level value="DEBUG" />
+      <level value="INFO" />
       <appender-ref ref="FileAppender" />
       <appender-ref ref="ConsoleAppender" />
       <appender-ref ref="TelegramAppender" />
