--- a/src/AntiPlagiarism.UpdateDb/AntiPlagiarism.UpdateDb.csproj
+++ b/src/AntiPlagiarism.UpdateDb/AntiPlagiarism.UpdateDb.csproj
@@ -6,4 +6,13 @@
   <ItemGroup>
     <ProjectReference Include="..\AntiPlagiarism.Web\AntiPlagiarism.Web.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="appsettings.local.json">
+      <DependentUpon>appsettings.json</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
