--- a/src/VideoAnnotations.Web/VideoAnnotations.Web.csproj
+++ b/src/VideoAnnotations.Web/VideoAnnotations.Web.csproj
@@ -30,12 +30,18 @@
         </PackageReference>
     </ItemGroup>
 
-		<ItemGroup>
-			<Content Update="appsettings.json">
-				<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-			</Content>
+	<ItemGroup>
 			<Content Include="deploy\VideoAnnotations.Web.Task.xml">
 				<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+			</Content>
+			<Content Update="appsettings.local.json">
+			  <DependentUpon>appsettings.json</DependentUpon>
+			  <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+			  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			</Content>
+			<Content Update="appsettings.json">
+			  <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+			  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			</Content>
 		</ItemGroup>
 
