--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -17,7 +17,7 @@
     <RootNamespace>uLearn.Web</RootNamespace>
     <AssemblyName>uLearn.Web</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
-    <MvcBuildViews>false</MvcBuildViews>
+    <MvcBuildViews>f`a`lse</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort>44300</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
@@ -26,7 +26,7 @@
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
     <AllowedReferenceRelatedFileExtensions>
-		.pdb
+    .pdb
     </AllowedReferenceRelatedFileExtensions>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
@@ -848,14 +848,26 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="appsettings.json">
+    <Content Update="appsettings.local.json">
+      <DependentUpon>appsettings.json</DependentUpon>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Update="appsettings.json">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <!-- Hack to copy Microsoft.Win32.Registry.dll. Without this Content item dll is not copying. I think it's bug
          in Framework + netstandard compatibility. Maybe it's related to https://github.com/dotnet/corefx/issues/24483 -->
     <!--<Content Include="..\packages\Microsoft.Win32.Registry.4.5.0\lib\net461\Microsoft.Win32.Registry.dll">-->
     <!--<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>-->
     <!--</Content>-->
+    <Content Include="appsettings.json" />
+    <Content Include="appsettings.local.json">
+      <DependentUpon>appsettings.json</DependentUpon>
+    </Content>
     <Content Include="codemirror\addon\comment\comment.js" />
     <Content Include="codemirror\addon\comment\continuecomment.js" />
     <Content Include="codemirror\addon\dialog\dialog.css" />
