--- a/src/Notifications/appsettings.json
+++ b/src/Notifications/appsettings.json
@@ -6,5 +6,6 @@
             "channel": ""
         }
     },
-    "graphiteServiceName": "notifications"
+    "graphiteServiceName": "notifications",
+    "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True"
 }
