--- a/src/uLearn.Web/appsettings.json
+++ b/src/uLearn.Web/appsettings.json
@@ -29,5 +29,6 @@
         "webhook": {
             "secret": ""
         }
-    }
+    },
+    "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True"
 }
