--- a/src/AntiPlagiarism.UpdateDb/AntiPlagiarism.UpdateDb.csproj
+++ b/src/AntiPlagiarism.UpdateDb/AntiPlagiarism.UpdateDb.csproj
@@ -9,10 +9,10 @@
   <ItemGroup>
     <None Update="appsettings.local.json">
       <DependentUpon>appsettings.json</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 </Project>
