--- a/src/Database.Core.Tests/Database.Core.Tests.csproj
+++ b/src/Database.Core.Tests/Database.Core.Tests.csproj
@@ -20,10 +20,10 @@
   <ItemGroup>
     <None Update="appsettings.local.json">
       <DependentUpon>appsettings.json</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 </Project>
