--- a/src/VideoAnnotations.Web/VideoAnnotations.Web.csproj
+++ b/src/VideoAnnotations.Web/VideoAnnotations.Web.csproj
@@ -36,12 +36,12 @@
 			</Content>
 			<Content Update="appsettings.local.json">
 			  <DependentUpon>appsettings.json</DependentUpon>
-			  <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-			  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			  <CopyToPublishDirectory>Newer</CopyToPublishDirectory>
+			  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 			</Content>
 			<Content Update="appsettings.json">
-			  <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-			  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			  <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+			  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 			</Content>
 		</ItemGroup>
 
