--- a/src/XQueueWatcher/appsettings.json
+++ b/src/XQueueWatcher/appsettings.json
@@ -6,5 +6,6 @@
             "channel": ""
         }
     },
-    "graphiteServiceName": "xqueuewatcher"
+    "graphiteServiceName": "xqueuewatcher",
+    "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True"
 }
