--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -1654,14 +1654,14 @@
     </PostBuildEvent>
   </PropertyGroup>
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
- <Target Name="CompileFrontend" BeforeTargets="BeforeBuild;OctoPack">
+ <!--<Target Name="CompileFrontend" BeforeTargets="BeforeBuild;OctoPack">
     <Exec Command="npm run build" WorkingDirectory="..\Frontend" />
-    <Exec Command="if not exist static mkdir static" WorkingDirectory="$(MSBuildProjectDirectory)" />
+    <Exec Command="if not exist static mkdir static" WorkingDirectory="$(MSBuildProjectDirectory)" /> -->
     <!-- Robocopy always exits with code 1: https://social.msdn.microsoft.com/Forums/en-US/d599833c-dcea-46f5-85e9-b1f028a0fefe/robocopy-exits-with-error-code-1?forum=tfsbuild -->
-    <Exec Command="robocopy /s ..\Frontend\build\static\ static\ || exit 0" WorkingDirectory="$(MSBuildProjectDirectory)" />
+ <!-- <Exec Command="robocopy /s ..\Frontend\build\static\ static\ || exit 0" WorkingDirectory="$(MSBuildProjectDirectory)" />
     <Exec Command="copy ..\Frontend\build\index.html index.html || exit 0" WorkingDirectory="$(MSBuildProjectDirectory)" />
     <Exec Command="copy ..\Frontend\build\service-worker.js service-worker.js || exit 0" WorkingDirectory="$(MSBuildProjectDirectory)" /> 
-  </Target>
+  </Target> -->
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
