--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -28,7 +28,7 @@
     },
     "web": {
         "cookieKeyRingDirectory": "../cookie_protection_keys/",
-        "cookieName": "test.ulearn.auth",
+        "cookieName": "ulearn.auth",
         "cookieDomain": "localhost",
         "cookieSecure": false,
         "cors": {
