--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -24,6 +24,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
     "classnames": "2.2.6",
+    "codemirror": "5.48.0",
     "css-loader": "1.0.0",
     "debounce": "1.2.0",
     "dotenv": "6.0.0",
