--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -41,6 +41,7 @@
     "file-saver": "2.0.0-rc.3",
     "fs-extra": "7.0.0",
     "jest": "24.5.0",
+    "katex": "0.10.2",
     "object-assign": "4.1.1",
     "outdated-browser-rework": "2.5.4",
     "polyfill-array-includes": "1.0.0",
