add usersFlashcardUnlocking db table, implement flashcards unlocking

--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -778,6 +778,10 @@
     <Compile Include="Migrations\201907191247514_AddUserFlashcardsVisits.Designer.cs">
       <DependentUpon>201907191247514_AddUserFlashcardsVisits.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201907220607352_AddUserFlashcardsUnlocking.cs" />
+    <Compile Include="Migrations\201907220607352_AddUserFlashcardsUnlocking.Designer.cs">
+      <DependentUpon>201907220607352_AddUserFlashcardsUnlocking.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AdditionalScore.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -820,6 +824,7 @@
     <Compile Include="Models\TextBlob.cs" />
     <Compile Include="Models\UnitAppearance.cs" />
     <Compile Include="Models\UserExerciseSubmission.cs" />
+    <Compile Include="Models\UserFlashcardsUnlocking.cs" />
     <Compile Include="Models\UserFlashcardsVisit.cs" />
     <Compile Include="Models\UserQuestion.cs" />
     <Compile Include="Models\UserQuizAnswer.cs" />
@@ -1223,6 +1228,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201907191247514_AddUserFlashcardsVisits.resx">
       <DependentUpon>201907191247514_AddUserFlashcardsVisits.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201907220607352_AddUserFlashcardsUnlocking.resx">
+      <DependentUpon>201907220607352_AddUserFlashcardsUnlocking.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
