--- a/src/RunCheckerJob/RunCheckerJob.csproj
+++ b/src/RunCheckerJob/RunCheckerJob.csproj
@@ -20,7 +20,10 @@
       <Content Include="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
-      <Content Include="App.Kontur.config">
+      <Content Include="log4net.config">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+      <Content Include="log4net.Kontur.config">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
       <Content Include="deploy/runcheckerjob.service">
