RunCheckerJob App.config -> appsettings.json

--- a/src/RunCheckerJob/appsettings.json
+++ b/src/RunCheckerJob/appsettings.json
@@ -1,3 +1,20 @@
 {
-	"graphiteServiceName": "runcheckerjob"
+	"graphiteServiceName": "runcheckerjob",
+	"statsdConnectionString": "address=graphite-test;port=8125;transport=Tcp;prefixKey=ulearn.local",
+	"submissionsUrl": "https://localhost:44300/",
+	"runnerToken": "F9388330-FF77-41B4-9011-1785F780C1CF",
+	"runCheckerJob": {
+		"sleepSeconds": 1,
+		"threadsCount": 1,
+		"agentName": "",
+		"submissionsWorkingDirectory": "",
+		"deleteSubmissions": true
+	},
+	"keepAliveInterval": 20,
+	"telegram": {
+		"botToken": "293737221:AAGaAxFmEUjmiyixyy6VNPsaqc_G5ChSYOg",
+		"errors": {
+			"channel": ""
+		}
+	}
 }
