--- a/src/uLearn.Web/appsettings.json
+++ b/src/uLearn.Web/appsettings.json
@@ -8,6 +8,7 @@
         }
     },
     "graphiteServiceName": "web",
+    "statsdConnectionString": "address=graphite-test;port=8125;transport=Tcp;prefixKey=ulearn.local",
     "buildExerciseStudentZips": true,
     "exerciseStudentZipsDirectory": "",
     "keysDirectory": "C:/ulearn/test_git_deploy_keys",
@@ -30,5 +31,6 @@
             "secret": ""
         }
     },
-    "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True"
+    "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True",
+    "runnerToken": "F9388330-FF77-41B4-9011-1785F780C1CF"
 }
