--- a/src/Notifications/App.config
+++ b/src/Notifications/App.config
@@ -5,11 +5,7 @@
 	<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 	
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
-  <connectionStrings>
-    <add name="statsd" connectionString="address=graphite-test;port=8125;transport=Tcp;prefixKey=ulearn.local" />
-  </connectionStrings>
   <appSettings>
-	<add key="ulearn.telegram.botToken" value="293737221:AAGaAxFmEUjmiyixyy6VNPsaqc_G5ChSYOg" />
 
 	<add key="ulearn.coursesDirectory" value="..\..\..\Courses\" />
 
@@ -26,12 +22,6 @@
 	<add key="ulearn.spam.channels.notifications" value="notifications" />
     <!-- Имя шаблона для письма с кнопкой. Поддерживаются переменные: title, content (+ text_content), button, button_link, button_text, content_after_button ( + text_content_after_button) -->
     <add key="ulearn.spam.templates.withButton" value="with_button" />
-
-	<!-- Канал в телеграме, куда отправлять информацию об ошибках -->
-	<add key="ulearn.telegram.errors.channel" value="" />
-	  
-	<!-- Раз в сколько секунд посылать метрику keep alive -->
-	<add key="ulearn.notifications.keepAlive.interval" value="10" />  
   </appSettings>
   <startup>
 	<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
@@ -68,8 +58,8 @@
 
     <!--
      Для работы этого аппендера должны быть установлены переменные:
-       ulearn.telegram.botToken
-       ulearn.telegram.errors.channel 
+       telegram:botToken
+       telegram:errors:channel 
     -->
     <appender name="TelegramAppender" type="Ulearn.Core.Logging.TelegramAppender, Core">
       <threshold value="Error" />
