--- a/src/RunCheckerJob/deploy/runcheckerjob.service
+++ b/src/RunCheckerJob/deploy/runcheckerjob.service
@@ -1,7 +1,6 @@
 [Unit]
 Description=RunCheckerJob Service
-After=docker.service
-Requires=docker.service
+After=network.target
 
 [Service]
 Type=simple
