--- a/src/XQueueWatcher/App.config
+++ b/src/XQueueWatcher/App.config
@@ -8,17 +8,7 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
   </startup>
-  <connectionStrings>
-    <!-- ConnectionString для подключения к Graphite-relay в формате "address=graphite-relay.com;port=8125;prefixKey=ulearn.local". Можно оставить пустой, чтобы не отправлять метрики -->
-    <add name="statsd" connectionString="address=graphite-test;port=8125;transport=Tcp;prefixKey=ulearn.local" />
-  </connectionStrings>
   <appSettings>
-      <add key="ulearn.telegram.botToken" value="" />
-      <!-- Канал в телеграме, куда отправлять информацию об ошибках -->
-      <add key="ulearn.telegram.errors.channel" value="" />
-
-      <!-- Раз в сколько секунд посылать метрику keep alive -->
-      <add key="ulearn.xqueuewatcher.keepAlive.interval" value="10" />
   </appSettings>
   <log4net>
 	<root>
@@ -52,8 +42,8 @@
       
     <!--
      Для работы этого аппендера должны быть установлены переменные:
-       ulearn.telegram.botToken
-       ulearn.telegram.errors.channel 
+       telegram:botToken
+       telegram:errors:channel 
     -->
     <appender name="TelegramAppender" type="Ulearn.Core.Logging.TelegramAppender, Core">
       <threshold value="Error" />
