SupportedLanguages in appsettings.json

--- a/src/RunCheckerJob/appsettings.json
+++ b/src/RunCheckerJob/appsettings.json
@@ -8,7 +8,8 @@
 		"threadsCount": 1,
 		"agentName": "",
 		"submissionsWorkingDirectory": "",
-		"deleteSubmissions": true
+		"deleteSubmissions": true,
+		"supportedLanguages": ["javascript"]
 	},
 	"keepAliveInterval": 20,
 	"telegram": {
