copy sandboxes on publish RunCheckerJob

--- a/src/RunCheckerJob/RunCheckerJob.csproj
+++ b/src/RunCheckerJob/RunCheckerJob.csproj
@@ -29,6 +29,10 @@
       <Content Include="deploy/runcheckerjob.service">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
+      <Content Include="..\..\sandboxes\**">
+        <Link>sandboxes\%(RecursiveDir)%(Filename)%(Extension)</Link>
+        <CopyToOutputDirectory>None</CopyToOutputDirectory>
+        <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+      </Content>
     </ItemGroup>
-
 </Project>
